fix(training): align the Fennec im-light frame

--- a/src/app/home.css
+++ b/src/app/home.css
@@ -1028,11 +1028,11 @@
 
 .training-radar-fennec-impact-frame {
   position: absolute;
-  left: 40.0669%;
-  top: 34.2818%;
+  left: 15.8085%;
+  top: 6.1722%;
+  width: 80.4954%;
+  height: 88.9024%;
   z-index: 2;
-  width: 56.0949%;
-  height: 64.9241%;
   pointer-events: none;
 }
 
